--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon server.js",
+    "dev": "node server.js",
     "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -14,13 +14,13 @@
   "dependencies": {
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "jimp": "^0.22.7",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.4",
     "socket.io": "^4.6.1",
-    "twilio": "^4.10.0"
+    "twilio": "^4.21.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
