--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "jimp": "^0.22.7",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.4",
-    "socket.io": "^4.6.1",
-    "twilio": "^3.0.0"
+    "socket.io": "^4.6.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
